<resources>
    <string name="app_name">PlayList</string>

    <string name="textView_start">Reproductor Online</string>

    <string name="textView2_reproductor">Reproductor de Audio</string>
    <string name="label1_reproductor">Titulo</string>
    <string name="label2_reproductor">URL</string>
    <string name="btn_reproductor">Volver</string>
    <string name="toast1_reproductor">Imposible reproducir el audio</string>
    <string name="str1_reproductor">Título</string>

    <string name="textView3_crear">Añadir Audio Online</string>
    <string name="textView4_crear">Título</string>
    <string name="textView5_crear">Url Audio</string>
    <string name="label1_crear">Introduce el título del audio</string>
    <string name="label2_crear">Introduce la url del audio</string>
    <string name="btn1_crear">Guardar Audio</string>
    <string name="toast1_crear">Todos los campos son obligatorios</string>
    <string name="toast2_crear">Audio guardado correctamente</string>

    <string name="item_salir_start">Salir</string>

</resources>